add_library(typecomp STATIC
    cdv1axis.h
    charset.c
    charset.h
    common.h
    cs.c
    cs.h
    dict.c
    dict.h
    encoding.c
    encoding.h
    eurosans.h
    euroserf.h
    fdselect.c
    fdselect.h
    fillinmm_sans.h
    fillinmm_serif.h
    font.h
    igara0.h
    igara1.h
    igara2.h
    igara3.h
    igara4.h
    isocenm.h
    jenson.h
    jimbo0.h
    jimbo1.h
    jimbo2.h
    kepler.h
    package.h
    parse.c
    parse.h
    recode.c
    recode.h
    rgara0.h
    rgara1.h
    rgara2.h
    rgara3.h
    sindex.c
    sindex.h
    subr.c
    subr.h
    t13.c
    t13.h
    tc.c
)

target_compile_options(typecomp PRIVATE
    -DTC_HINT_CHECK=1
    -DTC_T13_SUPPORT=0
    -DTC_EURO_SUPPORT=1
    -DTC_SUBR_SUPPORT=1
    -DTC_DEBUG=1
)
